--- a/index.html
+++ b/index.html
@@ -9,13 +9,61 @@
 </head>
 <body>
     <section>
+   
+        <div class="food-network text">
+            <h1>Skip The Diet, <br>
+                Just Eat Healthy <br>
+                With Food Network</h1>
+            <p>Imagine you don't need a diet because we provide <br>
+                healthy and delicious food for you!</p>
+            <a href="">Order Food</a>
+        </div>
+        <div class="bg-img">
+        <div class="food-network">
+            <img src="images/6667872_preview-removebg-preview.png" alt="">
+        </div>
+    </div>
+    </section>
+    <section>
         <div>
-            <h1></h1>
-            <p></p>
-            <a href=""></a>
+            <img src="images/Frame 58.jpg" alt="">
         </div>
         <div>
-            <img src="images/Group 8425.png" alt="">
+            <h1>About Me</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Condimentum diam orci pretium a pharetra,
+                feugiat cursus. Dictumst risus, sem egestas odio cras
+                adipiscing vulputate. Nisi, risus in suscipit non. Non
+                commodo volutpat, pharetra, vel.</p>
+            <a href="">Contact me</a>
+        </div>
+    </section>
+    <div>
+        <h1></h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+            elit. Condimentum diam orci pretium a pharetra,
+            feugiat cursus. Dictumst risus, sem egestas odio cras
+            adipiscing vulputate. Nisi, risus in suscipit non. Non
+            commodo volutpat, pharetra, vel.</p>
+    </div>
+    <section>
+        <div>
+            <img src="" alt="">
+            <h2>Recipie Title</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Condimentum diam orci pretium a pharetra,
+                feugiat cursus. Dictumst risus, sem egestas odio cras
+                adipiscing vulputate. Nisi, risus in suscipit non. Non
+                commodo volutpat, pharetra, vel.</p>
+        </div>
+        <div>
+            <img src="" alt="">
+            <h2>Recipie Title</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Condimentum diam orci pretium a pharetra,
+                feugiat cursus. Dictumst risus, sem egestas odio cras
+                adipiscing vulputate. Nisi, risus in suscipit non. Non
+                commodo volutpat, pharetra</p>
         </div>
     </section>
 </body>
